--- a/Kyrcoiva-Pamyatka/Kyrcoiva-Pamyatka.vcxproj.filters
+++ b/Kyrcoiva-Pamyatka/Kyrcoiva-Pamyatka.vcxproj.filters
@@ -18,5 +18,22 @@
     <ClCompile Include="Kyrcoiva-Pamyatka.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="mainGamefxf.cpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClCompile>
+    <ClCompile Include="mainGamefvxs.cpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mainGamefхf.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="mainGamefvxs.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
